<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUp">

   <TextView
       android:id="@+id/signup_title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/signup"
       android:textStyle="bold"
       android:gravity="center"
       android:layout_marginTop="100dp"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:textSize="36sp"
       app:layout_constraintTop_toTopOf="parent"/>

   <TextView
       android:id="@+id/signup_desc"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/signupDesc"
       android:layout_marginTop="12dp"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:textSize="16sp"
       app:layout_constraintTop_toBottomOf="@+id/signup_title"/>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/nameTextInput"
       style="@style/inputText"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/signup_desc"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <com.example.storyapp.customview.InputName
          android:id="@+id/name_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:inputType="text"
          android:hint="@string/input_name"/>
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/emailTextInput"
       style="@style/inputText"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/nameTextInput"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <com.example.storyapp.customview.InputEmail
          android:id="@+id/email_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:inputType="text"
          android:hint="@string/input_email" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/passTextInput"
       style="@style/inputText"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
       app:passwordToggleEnabled="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <com.example.storyapp.customview.InputPassword
          android:id="@+id/password_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="12dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/input_password"
          android:inputType="textPassword" />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/cPassTextInput"
       style="@style/inputText"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/passTextInput"
       app:passwordToggleEnabled="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <com.example.storyapp.customview.InputConfirmPass
          android:id="@+id/confirmPass_input"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:inputType="textPassword"
          android:hint="@string/input_cpass"/>
   </com.google.android.material.textfield.TextInputLayout>

   <com.example.storyapp.customview.CustomButton
       android:id="@+id/my_button_signup"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:enabled="false"
       android:hint="@string/button_signup"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cPassTextInput"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginStart="52dp"
       android:layout_marginEnd="52dp"
       app:layout_constraintTop_toBottomOf="@+id/my_button_signup">

      <TextView
          android:id="@+id/descLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="4dp"
          android:text="@string/descSignup"
          android:gravity="center"
          android:textSize="16sp"/>

      <TextView
          android:id="@+id/come_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="16dp"
          android:gravity="center"
          android:textColor="@color/black"
          android:text="@string/comeLogin"
          android:textSize="16sp"
          android:textStyle="bold"/>
   </LinearLayout>

   <ProgressBar
       android:id="@+id/progressBar"
       style="?android:attr/progressBarStyle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:visibility="gone"
       android:indeterminateTint="@color/blue_700"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>